--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -817,7 +817,7 @@ img.large {
   position: relative;
   border-radius: 4px;
   border-color: none;
-  z-index: 9000;
+  z-index: 9008;
   background: #fff;
 }
 .search-form.focus,
